# coding_without_pants

./: .gitignore  CLAUDE.md  README.md  build-contract.md  pantsless-test.md  plan.md  pyproject.toml  voice.md
docs/: pantsless-build-research.md  plan-review-fable.md  production-notes.md
src/cwp/: __init__.py  __main__.py  brief.py  build.py  capture.py  cli.py  config.py  drafting.py  episodes.py  lifecycle.py  publishing.py  templates.py  verify.py
tests/: test_brief.py  test_build.py  test_capture.py  test_cli.py  test_config.py  test_drafting.py  test_episodes.py  test_lifecycle.py  test_publishing.py  test_repo_files.py  test_seed.py  test_smoke_e2e.py  test_verify.py
tests/fixtures/: garbage_audio.html  garbage_button.html  garbage_dialog.html  golden.html
